--- a/Selenium/scrape.ipynb
+++ b/Selenium/scrape.ipynb
@@ -10,6 +10,7 @@
     "from bs4 import BeautifulSoup\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.chrome.options import Options\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "import pandas as pd"
    ]
@@ -20,22 +21,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
+    "chrome_options = Options()\n",
+    "chrome_options.add_argument('--headless')\n",
+    "chrome_options.add_argument('--no-sandbox')\n",
+    "chrome_options.add_argument('--disable-dev-shm-usage')\n",
     "\n",
-    "# URL to scrape\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()),options=chrome_options)\n",
+    "\n",
+    "\n",
     "url = \"https://github.com/aaronjoju07?tab=repositories\"\n",
     "driver.get(url)\n",
     "\n",
-    "# Wait for page to load\n",
     "time.sleep(5)\n",
     "\n",
-    "# Create BeautifulSoup object\n",
+    "\n",
     "soup = BeautifulSoup(driver.page_source, 'lxml')\n",
     "\n",
-    "# Find all <h3> elements\n",
     "datas = soup.find_all('h3', {'class': 'wb-break-all'})\n",
     "\n",
-    "# Lists to store scraped data\n",
     "urls = []\n",
     "texts = []\n",
     "about =[]\n",
@@ -43,12 +46,12 @@
     "star =[]\n",
     "used_by=[]\n",
     "\n",
-    "# Extract URLs and text from <a> tags inside <h3> elements\n",
+    "\n",
     "for data in datas:\n",
-    "    a_tag = data.find('a')  # Find <a> tag within <h3>\n",
+    "    a_tag = data.find('a') \n",
     "    if a_tag:\n",
     "        repUrl = 'https://github.com/'+a_tag['href']\n",
-    "        urls.append(repUrl)  # Extract URL\n",
+    "        urls.append(repUrl)  \n",
     "        driver.get(repUrl)\n",
     "        time.sleep(5)\n",
     "        soup = BeautifulSoup(driver.page_source, 'lxml')\n",
@@ -69,12 +72,11 @@
     "        star.append(starSpan)\n",
     "        # usedBySpan = soup.find('span', {'id': 'repo-network-counter'}).text.strip()\n",
     "        repName = a_tag.text\n",
-    "        texts.append(repName.strip())  # Extract text\n",
+    "        texts.append(repName.strip()) \n",
     "\n",
-    "# Create a dataframe\n",
     "df = pd.DataFrame({'URL': urls, 'Text': texts, 'About': about,'fork':fork,'star':star})\n",
-    "# Quit the webdriver\n",
-    "driver.quit()"
+    "driver.quit()\n",
+    "df.to_csv('github.csv', index=False)"
    ]
   },
   {
